--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
     "@radix-ui/react-icons": "^1.3.2",
+    "framer-motion": "^12.23.3",
     "next": "13.4.0",
     "react": "18",
     "react-dom": "18",
