--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,55 @@
-/node-modules
+# ─────────────────────────────────────────────
+#  NEXT.JS & NODE
+# ─────────────────────────────────────────────
+.next/                 # Next.js build output
+out/                   # `next export` static output
+.vercel/               # Vercel deployment config / cache
+.netlify/              # Netlify build cache (if used)
+dist/                  # General build artifacts (e.g. tRPC gen)
+*.tsbuildinfo          # TypeScript incremental build info
+
+# ─────────────────────────────────────────────
+#  DEPENDENCY DIRECTORIES
+# ─────────────────────────────────────────────
+node_modules/
+.pnp/                  # Yarn 2 Plug'n'Play
+.pnpm-store/
+
+# ─────────────────────────────────────────────
+#  ENV / SECRETS
+# ─────────────────────────────────────────────
+.env*
+!.env.example          # Keep a sample env file
+
+# ─────────────────────────────────────────────
+#  LOGS & COVERAGE
+# ─────────────────────────────────────────────
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+coverage/
+
+# ─────────────────────────────────────────────
+#  OS / EDITOR TRASH
+# ─────────────────────────────────────────────
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# ─────────────────────────────────────────────
+#  TEST & STORYBOOK OUTPUT
+# ─────────────────────────────────────────────
+storybook-static/
+.cache/
+jest-*.json
+
+# ─────────────────────────────────────────────
+#  TURBO / NX / BAZEL (monorepo helpers—comment out if unused)
+# ─────────────────────────────────────────────
+turbo/
+bazel-out/
